--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header>
         <div >
             <h1></h1>
-            <p>retrouver ici mais differant lien que je partage et offre de parainage</p>
+            <p>Trouver ici mais différents liens que je partage, qui sont des liens de parrainages.</p>
         </div>
     </header>
     <div class="share-link">
         <div class="heade-share-link">
-            <h2>Liens vers les differans service financier que j'utilise</h2>
-            <p>Je ne suis pas conseiller en investissement, l'investissement comprend une part de risque alors fait vos recherches de votre côté et surtout jamais de confiance aveugle</p>
+            <h2>Liens vers les différents services financiers que j'utilise</h2>
+            <p>Je ne suis pas conseiller en investissement, l'investissement comprend une part de risque alors fait vos recherches de votre côté et surtout jamais de confiance aveugle.</p>
         </div>
         <div class="listing">
             <ul>
@@ -44,7 +44,7 @@
                         <img class="box-img " src="https://pbs.twimg.com/profile_images/1521791444779945984/wSxAJ95T_400x400.png" alt="logo Nexo">
                         <div class="meta-box">
                             <h3>Nexo</h3>
-                            <p>Courtier allemend avec mon parrainage recoi 25€ en BTC (a partire de 100€ de depot)</p>
+                            <p>Plate-forme pour les prêts, échange et épargne de crypto-monnaies, avec mon parrainage reçoit 25€ en BTC (à partir de 100€ de dépôt)</p>
                         </div>
                     </li>
                 </a>
@@ -53,15 +53,15 @@
                         <img class="box-img " src="https://play-lh.googleusercontent.com/PjoJoG27miSglVBXoXrxBSLveV6e3EeBPpNY55aiUUBM9Q1RCETKCOqdOkX2ZydqVf0" alt="logo Coinbase">
                         <div class="meta-box">
                             <h3>Coinbase</h3>
-                            <p>Courtier americains pour axes sur les crypto monnais avec mon parrainage recoi 10€ en BTC</p>
+                            <p>Courtier sur le marché des cryptos monnaies avec mon parrainage reçoit 10€ en BTC</p>
                         </div>
                     </li>
                 </a>
             </ul>
         </div>
     </div>
-    <div>
+    <!-- <div>
         <h2>Liens vers les differans outils financier que je vous partage</h2>
-    </div>
+    </div> -->
 </body>
 </html>
