--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
                         <img class="box-img " src="https://play-lh.googleusercontent.com/pHXtOQQ__TBgp_c9FgfBOCp4cXL9oU5tVAe318JDvcQP266UCO7U_VyO6lUzo8ZWPWJ_" alt="logo Trade Republic">
                         <div class="meta-box">
                             <h3>Trade Republic</h3>
-                            <p>Courtier allemend</p>
+                            <p>Courtier allemand</p>
                         </div>
                     </li>
                 </a>
